converted added dtos to records